# Minecraft-Launcher-RS

./: .gitignore  Cargo.toml  README.md
crates/minecraft/: Cargo.toml
crates/minecraft/src/: main.rs
crates/minecraft/src/launcher/: install.rs  mod.rs  types.rs
crates/minecraft/src/launcher/modloaders/: mod.rs
