[package]
name = "minecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"]}
reqwest = "0.12.23"
toml = "0.9.5"
serde_json = "1.0.143"
zip = "4.5.0"
mlua = {version = "0.11.2", features = ["luau-jit"]}
regex = "1.11.2"
os_info = "3.12.0"

[build-dependencies]
csbindgen = "1.9.5"
bindgen = "0.72.0"
pyo3 = "0.25.1"